@@ -35,6 +35,7 @@ function skeleton_update(&$content, $currentVersion)
 + Updated for phpws Core 2.0.0
 + PHP strict fixes
 + Some code tidy up
++ Implemented Icon class
 
 </pre>';
 
